--- a/covid_KGEs.ipynb
+++ b/covid_KGEs.ipynb
@@ -11,7 +11,7 @@
     "!pip3 install dglke\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "drkg_file = '/Users/ravinschmidl/Desktop/CoV-KGE-master/KG.tsv'\n",
+    "drkg_file = '\\unimaas.nl\users\students\i6125866\data\My Documents\KG.tsv'\n",
     "df = pd.read_csv(drkg_file, sep=\"\\t\", index_col = 0)\n"
    ]
   },
@@ -60,15 +60,15 @@
     "valid_set = seed[train_cnt:train_cnt+valid_cnt].tolist()\n",
     "test_set = seed[train_cnt+valid_cnt:].tolist()\n",
     "\n",
-    "with open(\"/Users/ravinschmidl/Desktop/CoV-KGE-master/train/kg_train.tsv\", 'w+') as f:\n",
+    "with open(\"\\unimaas.nl\users\students\i6125866\data\My Documents\train\kg_train.tsv\", 'w+') as f:\n",
     "    for idx in train_set:\n",
     "        f.writelines(\"{}\\t{}\\t{}\\n\".format(triples[idx][0], triples[idx][1], triples[idx][2]))\n",
     "        \n",
-    "with open(\"/Users/ravinschmidl/Desktop/CoV-KGE-master/train/kg_valid.tsv\", 'w+') as f:\n",
+    "with open(\"\\unimaas.nl\users\students\i6125866\data\My Documents\train\kg_valid.tsv\", 'w+') as f:\n",
     "    for idx in valid_set:\n",
     "        f.writelines(\"{}\\t{}\\t{}\\n\".format(triples[idx][0], triples[idx][1], triples[idx][2]))\n",
     "\n",
-    "with open(\"/Users/ravinschmidl/Desktop/CoV-KGE-master/train/kg_test.tsv\", 'w+') as f:\n",
+    "with open(\"\\unimaas.nl\users\students\i6125866\data\My Documents\train\kg_test.tsv\", 'w+') as f:\n",
     "    for idx in test_set:\n",
     "        f.writelines(\"{}\\t{}\\t{}\\n\".format(triples[idx][0], triples[idx][1], triples[idx][2]))"
    ]
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!DGLBACKEND=pytorch dglke_train --dataset KG --data_path /Users/ravinschmidl/Desktop/CoV-KGE-master/train --data_files kg_train.tsv kg_valid.tsv kg_test.tsv --format 'raw_udd_hrt' --model_name RotatE --batch_size 1024 \\\n",
+    "!DGLBACKEND=pytorch dglke_train --dataset KG --data_path \\unimaas.nl\users\students\i6125866\data\My Documents\train --data_files kg_train.tsv kg_valid.tsv kg_test.tsv --format 'raw_udd_hrt' --model_name RotatE --batch_size 1024 \\\n",
     "--neg_sample_size 256 --hidden_dim 400 --gamma 12.0 --lr 0.1 --max_step 100000 --log_interval 1000 --batch_size_eval 16 -adv --regularization_coef 1.00E-07 --test --num_thread 1 --gpu 0 1 2 3 4 5 6 7 --num_proc 8 --neg_sample_size_eval 10000 --async_update"
    ]
   },
